<resources>
    <!--  BASE  -->
    <string name="app_name">CoinApp</string>
    <string name="some_error_has_occurred">Произошла какая-то ошибка :(\nПопробуем снова?</string>
    <string name="try_again">Попробовать</string>
    <!--  Coins screen  -->
    <string name="list_of_cryptocurrencies">Список криптовалют</string>
    <string name="there_was_an_error_loading">Произошла ошибка при загрузке</string>
    <!--  Coin detail screen  -->
    <string name="description">Описание</string>
    <string name="categories">Категории</string>
    <string name="usd">USD</string>
    <string name="rub">RUB</string>
    <string name="coin_image">coin image</string>
    <string name="test_description">Bitcoin is the first successful internet money based on peer-to-peer technology; whereby no central bank or authority is involved in the transaction and production of the Bitcoin currency</string>
    <string name="test_categories">Smart Contract Platform, Ethereum Ecosystems</string>
</resources>