<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_15dp"
    tools:context=".feature.cryptocurrency.presentation.screen.coin_detail.CoinDetailFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="scrollView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="loading_progress_bar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_coin_default, text_error, btn_try_again"/>

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        style="@style/BaseProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/image_coin_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/coin_image"
        android:src="@drawable/im_coin"
        app:layout_constraintBottom_toTopOf="@+id/text_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_error"
        style="@style/CustomText.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin_15dp"
        android:text="@string/some_error_has_occurred"
        app:layout_constraintBottom_toTopOf="@+id/btn_try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_coin_default" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try_again"
        style="@style/BaseButton.Main"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_error" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_coin"
                android:layout_width="@dimen/image_size_medium"
                android:layout_height="@dimen/image_size_medium"
                android:background="@android:color/transparent"
                android:layout_marginVertical="@dimen/margin_10dp"
                android:contentDescription="@string/coin_image"
                tools:src="@drawable/im_coin" />

            <TextView
                android:id="@+id/description_hardcode"
                style="@style/CustomText.LargeTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                style="@style/CustomText.Title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_15dp"
                tools:text="@string/test_description" />

            <TextView
                android:id="@+id/category_hardcode"
                style="@style/CustomText.LargeTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:text="@string/categories" />

            <TextView
                android:id="@+id/category"
                style="@style/CustomText.Title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/test_categories" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>