<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.cryptocurrency.presentation.screen.coins.CoinsFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_15dp"
        app:singleSelection="true"
        app:checkedChip="@id/chip_usd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_usd"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_rub"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rub" />

    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="cryptocurrencies" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_coin, text_error, btn_try_again"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="loading_progress_bar"/>

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        style="@style/BaseProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cryptocurrencies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:listitem="@layout/item_cryptocurrency"/>

    <ImageButton
        android:id="@+id/image_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/coin_image"
        android:src="@drawable/im_coin"
        app:layout_constraintBottom_toTopOf="@+id/text_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_error"
        style="@style/CustomText.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin_15dp"
        android:text="@string/some_error_has_occurred"
        app:layout_constraintBottom_toTopOf="@+id/btn_try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_coin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try_again"
        style="@style/BaseButton.Main"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_error" />
</androidx.constraintlayout.widget.ConstraintLayout>